--- a/common/card.less
+++ b/common/card.less
@@ -38,6 +38,12 @@
 	font-size: 17px;
 	color: #333;
 	font-weight: 600;
+	overflow: hidden;
+	word-break: break-all;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 2;
 }
 
 .card_others {
