--- a/common/card.css
+++ b/common/card.css
@@ -17,7 +17,7 @@
 
 .card_pic {
 	width: 246upx;
-	height: 184upx;
+	height: 200upx;
 	margin-right: 24upx;
 	border-radius: 8upx;
 	/* margin-top: 40upx; */
@@ -32,7 +32,7 @@
 	margin-left: 30upx;
 	margin-right: 30upx;
 	flex:1;
-	border-top: 1px solid #E5E5E5;
+	border-bottom: 1px solid #E5E5E5;
 	padding-top:40upx;
 	padding-bottom:40upx;
 
@@ -49,7 +49,7 @@
 .card_title {
 	font-size: 17px;
 	color: #333;
-	font-weight: 600;
+	font-weight: 700;
 	overflow: hidden;
 	word-break: break-all;
 	text-overflow: ellipsis;
@@ -101,7 +101,7 @@
 	padding-top: 39upx;
 }
 .self_intro_container text{
-	font-size: 31upx;color: #000;font-weight: 600;
+	font-size: 31upx;color: #000;font-weight: 700;
 }
 .self_intro_container image{
 	width: 30upx;height: 29upx;
