--- a/common/card.css
+++ b/common/card.css
@@ -49,7 +49,7 @@
 .card_title {
 	font-size: 17px;
 	color: #333;
-	font-weight: 700;
+	/* font-weight: 700; */
 	overflow: hidden;
 	word-break: break-all;
 	text-overflow: ellipsis;
